@@ -1,5 +1,11 @@
 2007-12-22  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/tinderbox.py, jhbuild/frontends/tinderbox.py: added
+	-N (--nopoison) and -C (--try-checkout) support for tinderbox, patch by
+	Craig Keogh.
+
+2007-12-22  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/versioncontrol/svn.py: added possibility to specify a
 	revision number in the revision attribute, not just a branch
 	(considered as revision number if it is all digits); patch by Craig
